# Poll_with_FastAPI

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  sonar-project.properties  test_api.py
.github/workflows/: api_ci.yml  pylint.yml  sonarqube-scan.yml
alembic/versions/: 03b47e787d27_create_users_table.py  1d844ba38557_create_polls_table.py
db/: db.py
db/models/: models.py
