[tool.poetry]
name = "poll-with-fastapi"
version = "0.1.0"
description = "This is a fastapi project"
authors = ["gkushel <gkushel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
databases = "^0.9.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
